rust/transpiler/snapshots/props@complex_types@output.snap
---
source: transpiler/tests/golden_tests.rs
expression: r.code.trim()
input_file: transpiler/tests/props/complex_types.hyper
---
from hyper import escape, replace_markers

def ComplexTypes(simple: str, with_default: str = "default", optional: str | None = None, items: list[str], mapping: dict[str, int], nested: list[dict[str, Any]], callback: Callable[[int], str], *args: tuple, **kwargs: dict) -> str:
    _parts = []
    _parts.append(f"""<div><span>‹ESCAPE:{simple}›</span><span>‹ESCAPE:{with_default}›</span><span>‹ESCAPE:{optional or 'none'}›</span><span>‹ESCAPE:{len(items)}›</span><span>‹ESCAPE:{len(mapping)}›</span></div>""")
    return replace_markers("".join(_parts))
