rust/transpiler/snapshots/props@defaults@injections.snap
---
source: transpiler/tests/golden_tests.rs
expression: "serde_json::json!({\n    \"ranges\": result.ranges, \"injections\": result.injections,\n})"
input_file: transpiler/tests/props/defaults.hyper
---
injections:
  - end: 19
    prefix: "from hyper import escape, replace_markers\n\ndef Defaults("
    start: 0
    suffix: ""
    type: python
  - end: 34
    prefix: ", "
    start: 20
    suffix: ""
    type: python
  - end: 57
    prefix: ") -> str:\n    _parts = []\n    _parts.append(f\"\"\"<h1>Hello ‹ESCAPE:{"
    start: 51
    suffix: ""
    type: python
  - end: 80
    prefix: "}›</h1><p>Count: ‹ESCAPE:{"
    start: 73
    suffix: "}›</p>\"\"\")\n    return replace_markers(\"\".join(_parts))\n"
    type: python
ranges:
  - compiled_end: 75
    compiled_start: 56
    range_type: Python
    source_end: 19
    source_start: 0
  - compiled_end: 91
    compiled_start: 77
    range_type: Python
    source_end: 34
    source_start: 20
  - compiled_end: 162
    compiled_start: 158
    range_type: Python
    source_end: 57
    source_start: 51
  - compiled_end: 193
    compiled_start: 188
    range_type: Python
    source_end: 80
    source_start: 73
