rust/transpiler/snapshots/props@defaults@output.snap
---
source: transpiler/tests/golden_tests.rs
expression: r.code.trim()
input_file: transpiler/tests/props/defaults.hyper
---
from hyper import escape, replace_markers

def Defaults(name: str = "World", count: int = 0) -> str:
    _parts = []
    _parts.append(f"""<h1>Hello ‹ESCAPE:{name}›</h1><p>Count: ‹ESCAPE:{count}›</p>""")
    return replace_markers("".join(_parts))
