rust/transpiler/snapshots/props@kwargs@injections.snap
---
source: transpiler/tests/golden_tests.rs
expression: "serde_json::json!({\n    \"ranges\": result.ranges, \"injections\": result.injections,\n})"
input_file: transpiler/tests/props/kwargs.hyper
---
injections:
  - end: 53
    prefix: "from hyper import escape, replace_markers\n\ndef Kwargs(label: str, **attrs: dict) -> str:\n    _parts = []\n    _parts.append(f\"\"\"<button attrs=‹SPREAD:{attrs}›>‹ESCAPE:{"
    start: 48
    suffix: "}›</button>\"\"\")\n    return replace_markers(\"\".join(_parts))\n"
    type: python
ranges:
  - compiled_end: 64
    compiled_start: 54
    range_type: Python
    source_end: 10
    source_start: 0
  - compiled_end: 79
    compiled_start: 66
    range_type: Python
    source_end: 24
    source_start: 11
  - compiled_end: 172
    compiled_start: 167
    range_type: Python
    source_end: 53
    source_start: 48
