rust/transpiler/snapshots/props@simple@injections.snap
---
source: transpiler/tests/golden_tests.rs
expression: "serde_json::json!({\n    \"ranges\": result.ranges, \"injections\": result.injections,\n})"
input_file: transpiler/tests/props/simple.hyper
---
injections:
  - end: 10
    prefix: "from hyper import escape, replace_markers\n\ndef Simple("
    start: 0
    suffix: ""
    type: python
  - end: 21
    prefix: ", "
    start: 11
    suffix: ""
    type: python
  - end: 49
    prefix: ") -> str:\n    _parts = []\n    _parts.append(f\"\"\"<div><h1>‹ESCAPE:{"
    start: 42
    suffix: ""
    type: python
  - end: 76
    prefix: "}›</h1><p>Count: ‹ESCAPE:{"
    start: 69
    suffix: "}›</p></div>\"\"\")\n    return replace_markers(\"\".join(_parts))\n"
    type: python
ranges:
  - compiled_end: 64
    compiled_start: 54
    range_type: Python
    source_end: 10
    source_start: 0
  - compiled_end: 76
    compiled_start: 66
    range_type: Python
    source_end: 21
    source_start: 11
  - compiled_end: 147
    compiled_start: 142
    range_type: Python
    source_end: 49
    source_start: 42
  - compiled_end: 178
    compiled_start: 173
    range_type: Python
    source_end: 76
    source_start: 69
