rust/transpiler/snapshots/slots@named_slots@injections.snap
---
source: transpiler/tests/golden_tests.rs
expression: "serde_json::json!({\n    \"ranges\": result.ranges, \"injections\": result.injections,\n})"
input_file: transpiler/tests/slots/named_slots.hyper
---
injections: []
ranges: []
